page listing - index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,26 @@
 ---
+// import PokemonCard from '@components/pokemons/PokemonCard.astro'
+import PokemonCard from '@components/pokemons/PokemonCard.astro'
+import Title from '@components/shared/Title.astro'
+import type { PokemonListResponse } from '@interfaces/pokemon-list.response'
+import LayoutMain from '@layouts/LayoutMain.astro'
 
+const response = await fetch('https://pokeapi.co/api/v2/pokemon')
+const data = (await response.json()) as PokemonListResponse
+console.log(data)
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<LayoutMain title="Pokemon API - Home">
+  <Title>Listado de pokemons</Title>
+  <hr />
+  <section
+    aria-label="Listado de Pokemon"
+    class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-5 gap-4 mt-5"
+  >
+    {
+      data.results.map((pokemon) => (
+        <PokemonCard name={pokemon.name} url={pokemon.url} />
+      ))
+    }
+  </section>
+</LayoutMain>
