--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -2,7 +2,8 @@
 const links = [
   { text: 'Listado', href: '/' },
   { text: 'Páginado', href: '/pokemons/1' },
-  { text: 'Favoritos', href: '/favorites' }
+  { text: 'Favoritos', href: '/favorites' },
+  { text: 'Islas', href: '/island' }
 ]
 ---
 
